Add Meta-Annotations for Swagger (#1060)